feat: environments as resources (#2415)
* remove old environment endpoints

* implement environments as a resource

* fix build after rebase

* fix encoding

* fix test

* registering environent resource routes (#2435)

* feature(frontend): enabling environments as resources (#2437)

* remove old environment endpoints

* implement environments as a resource

* fix build after rebase

* fix encoding

* fix test

* registering environent resource routes (#2435)

* feature(frontend): enabling environments as resources

* feature(frontend): fixing unit tests

---------


* add instrumentation to resource manager

* Update map conversion logic

* fix cli tests

* fix rebase

* fix span name

* fix tests

* remove broken middleware config

* fix generated file

* chore(docs): updating docs

* feature(cli): enabling environments as resources (#2446)

* remove old environment endpoints

* feature(frontend): enabling environments as resources (#2437)

* remove old environment endpoints

* implement environments as a resource

* fix build after rebase

* fix encoding

* fix test

* registering environent resource routes (#2435)

* feature(frontend): enabling environments as resources

* feature(frontend): fixing unit tests

---------


* fixing unit tests

* feature(cli): enabling environments as resources

* fixing environments tracetest testing with tracetest

* fixing environments tracetest testing with tracetest

* fixing environments tracetest testing with tracetest

* remove old environment endpoints

* implement environments as a resource

* fix build after rebase

* fix encoding

* registering environent resource routes (#2435)

* feature(frontend): enabling environments as resources (#2437)

* remove old environment endpoints

* implement environments as a resource

* fix build after rebase

* fix encoding

* fix test

* registering environent resource routes (
