# api/openapi.yaml
@@ -643,136 +643,6 @@ paths:
                 items:
                   $ref: "./testEvents.yaml#/components/schemas/TestRunEvent"
 
-  # Environments
-  /environments:
-    get:
-      tags:
-        - api
-      summary: "Get Environments"
-      description: "Get Environments"
-      operationId: getEnvironments
-      parameters:
-        - $ref: "./parameters.yaml#/components/parameters/take"
-        - $ref: "./parameters.yaml#/components/parameters/skip"
-        - $ref: "./parameters.yaml#/components/parameters/query"
-        - $ref: "./parameters.yaml#/components/parameters/sortBy"
-        - $ref: "./parameters.yaml#/components/parameters/sortDirection"
-      responses:
-        200:
-          description: successful operation
-          headers:
-            X-Total-Count:
-              schema:
-                type: integer
-              description: Total records count
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: "./environments.yaml#/components/schemas/Environment"
-        500:
-          description: "problem with getting environments"
-    post:
-      tags:
-        - api
-      summary: "Create new environment"
-      description: "Create new environment action"
-      operationId: createEnvironment
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: "./environments.yaml#/components/schemas/Environment"
-      responses:
-        200:
-          description: successful operation
-          content:
-            application/json:
-              schema:
-                $ref: "./environments.yaml#/components/schemas/Environment"
-        400:
-          description: "trying to create a environment with an already existing ID"
-  /environments/{environmentId}:
-    get:
-      tags:
-        - api
-      parameters:
-        - in: path
-          name: environmentId
-          schema:
-            type: string
-          required: true
-      summary: "get environment"
-      description: "get environment"
-      operationId: getEnvironment
-      responses:
-        200:
-          description: successful operation
-          content:
-            application/json:
-              schema:
-                $ref: "./environments.yaml#/components/schemas/Environment"
-        500:
-          description: "problem with getting a environment"
-    put:
-      tags:
-        - api
-      parameters:
-        - in: path
-          name: environmentId
-          schema:
-            type: string
-          required: true
-      summary: "update environment"
-      description: "update environment action"
-      operationId: updateEnvironment
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: "./environments.yaml#/components/schemas/Environment"
-      responses:
-        204:
-          description: successful operation
-        500:
-          description: "problem with updating environment"
-    delete:
-      tags:
-        - api
-      parameters:
-        - in: path
-          name: environmentId
-          schema:
-            type: string
-          required: true
-      summary: "delete a environment"
-      description: "delete a environment"
-      operationId: deleteEnvironment
-      responses:
-        "204":
-          description: OK
-  /environments/{environmentId}/definition.yaml:
-    get:
-      tags:
-        - api
-      parameters:
-        - in: path
-          name: environmentId
-          schema:
-            type: string
-          required: true
-      summary: Get the environment definition as an YAML file
-      description: Get the environment as an YAML file
-      operationId: getEnvironmentDefinitionFile
-      responses:
-        200:
-          description: OK
-          content:
-            application/yaml:
-              schema:
-                type: string
-
   # Expressions
   /expressions/resolve:
     post:
@@ -1140,7 +1010,146 @@ paths:
       description: "Delete a Data Store"
       operationId: deleteDataStore
       responses:
+        "204":
+          description: OK
+
+  # Environments
+  /environments:
+    get:
+      tags:
+        - resource-api
+      summary: "List environments"
+      description: "List environments available in Tracetest."
+      operationId: listEnvironments
+      parameters:
+        - $ref: "./parameters.yaml#/components/parameters/take"
+        - $ref: "./parameters.yaml#/components/parameters/skip"
+        - $ref: "./parameters.yaml#/components/parameters/switchableResourceSortBy"
+        - $ref: "./parameters.yaml#/components/parameters/sortDirection"
+      responses:
+        200:
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  count:
+                    type: integer
+                  items:
+                    type: array
+                    items:
+                      $ref: "./environments.yaml#/components/schemas/EnvironmentResource"
+            text/yaml:
+              schema:
+                type: object
+                properties:
+                  count:
+                    type: integer
+                  items:
+                    type: array
+                    items:
+                      $ref: "./environments.yaml#/components/schemas/EnvironmentResource"
+        400:
+          description: "invalid query for environments, some data was sent in incorrect format."
+        500:
+          description: "problem listing environments"
+    post:
+      tags:
+        - resource-api
+      summary: "Create an environment"
+      description: "Create an environment that can be used by tests and transactions"
+      operationId: createEnvironment
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "./environments.yaml#/components/schemas/EnvironmentResource"
+          text/yaml:
+            schema:
+              $ref: "./environments.yaml#/components/schemas/EnvironmentResource"
+      responses:
+        201:
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: "./environments.yaml#/components/schemas/EnvironmentResource"
+            text/yaml:
+              schema:
+                $ref: "./environments.yaml#/components/schemas/EnvironmentResource"
+        500:
+          description: "problem creating an environment"
+
+  /environments/{environmentId}:
+    get:
+      tags:
+        - resource-api
+      parameters:
+        - $ref: "./parameters.yaml#/components/parameters/environmentId"
+      summary: "Get a specific environment"
+      description: "Get one environment by its id"
+      operationId: getEnvironment
+      responses:
+        200:
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: "./environments.yaml#/components/schemas/EnvironmentResource"
+            text/yaml:
+              schema:
+                $ref: "./environments.yaml#/components/schemas/EnvironmentResource"
+        404:
+          description: "environment not found"
+        500:
+          description: "problem getting an environment"
+    put:
+      tags:
+        - resource-api
+      parameters:
+        - $ref: "./parameters.yaml#/components/parameters/environmentId"
+      summary: "Update an environment"
+      description: "Update an environment used on Tracetest"
+      operationId: updateEnvironment
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "./environments.yaml#/components/schemas/EnvironmentResource"
+          text/yaml:
+            schema:
+              $ref: "./environments.yaml#/components/schemas/EnvironmentResource"
+      responses:
+        200:
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: "./environments.yaml#/components/schemas/EnvironmentResource"
+            text/yaml:
+              schema:
+                $ref: "./environments.yaml#/components/schemas/EnvironmentResource"
+        400:
+          description: "invalid environment, some data was sent in incorrect format."
+        404:
+          description: "environment not found"
+        500:
+          description: "problem updating an environment"
+    delete:
+      tags:
+        - resource-api
+      parameters:
+        - $ref: "./parameters.yaml#/components/parameters/environmentId"
+      summary: "Delete an environment"
+      description: "Delete an environment from Tracetest"
+      operationId: deleteEnvironment
+      responses:
         204:
           description: successful operation
+        400:
+          description: "invalid environment, some data was sent in incorrect format."
+        404:
+          description: "environment not found"
         500:
-          description: "problem with data store deletion"
+          description: "problem deleting an environment"
