# cli/openapi/model_list_environments_200_response.go
@@ -1,0 +1,160 @@
+/*
+TraceTest
+
+OpenAPI definition for TraceTest endpoint and resources
+
+API version: 0.2.1
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package openapi
+
+import (
+	"encoding/json"
+)
+
+// checks if the ListEnvironments200Response type satisfies the MappedNullable interface at compile time
+var _ MappedNullable = &ListEnvironments200Response{}
+
+// ListEnvironments200Response struct for ListEnvironments200Response
+type ListEnvironments200Response struct {
+	Count *int32                `json:"count,omitempty"`
+	Items []EnvironmentResource `json:"items,omitempty"`
+}
+
+// NewListEnvironments200Response instantiates a new ListEnvironments200Response object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewListEnvironments200Response() *ListEnvironments200Response {
+	this := ListEnvironments200Response{}
+	return &this
+}
+
+// NewListEnvironments200ResponseWithDefaults instantiates a new ListEnvironments200Response object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewListEnvironments200ResponseWithDefaults() *ListEnvironments200Response {
+	this := ListEnvironments200Response{}
+	return &this
+}
+
+// GetCount returns the Count field value if set, zero value otherwise.
+func (o *ListEnvironments200Response) GetCount() int32 {
+	if o == nil || isNil(o.Count) {
+		var ret int32
+		return ret
+	}
+	return *o.Count
+}
+
+// GetCountOk returns a tuple with the Count field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *ListEnvironments200Response) GetCountOk() (*int32, bool) {
+	if o == nil || isNil(o.Count) {
+		return nil, false
+	}
+	return o.Count, true
+}
+
+// HasCount returns a boolean if a field has been set.
+func (o *ListEnvironments200Response) HasCount() bool {
+	if o != nil && !isNil(o.Count) {
+		return true
+	}
+
+	return false
+}
+
+// SetCount gets a reference to the given int32 and assigns it to the Count field.
+func (o *ListEnvironments200Response) SetCount(v int32) {
+	o.Count = &v
+}
+
+// GetItems returns the Items field value if set, zero value otherwise.
+func (o *ListEnvironments200Response) GetItems() []EnvironmentResource {
+	if o == nil || isNil(o.Items) {
+		var ret []EnvironmentResource
+		return ret
+	}
+	return o.Items
+}
+
+// GetItemsOk returns a tuple with the Items field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *ListEnvironments200Response) GetItemsOk() ([]EnvironmentResource, bool) {
+	if o == nil || isNil(o.Items) {
+		return nil, false
+	}
+	return o.Items, true
+}
+
+// HasItems returns a boolean if a field has been set.
+func (o *ListEnvironments200Response) HasItems() bool {
+	if o != nil && !isNil(o.Items) {
+		return true
+	}
+
+	return false
+}
+
+// SetItems gets a reference to the given []EnvironmentResource and assigns it to the Items field.
+func (o *ListEnvironments200Response) SetItems(v []EnvironmentResource) {
+	o.Items = v
+}
+
+func (o ListEnvironments200Response) MarshalJSON() ([]byte, error) {
+	toSerialize, err := o.ToMap()
+	if err != nil {
+		return []byte{}, err
+	}
+	return json.Marshal(toSerialize)
+}
+
+func (o ListEnvironments200Response) ToMap() (map[string]interface{}, error) {
+	toSerialize := map[string]interface{}{}
+	if !isNil(o.Count) {
+		toSerialize["count"] = o.Count
+	}
+	if !isNil(o.Items) {
+		toSerialize["items"] = o.Items
+	}
+	return toSerialize, nil
+}
+
+type NullableListEnvironments200Response struct {
+	value *ListEnvironments200Response
+	isSet bool
+}
+
+func (v NullableListEnvironments200Response) Get() *ListEnvironments200Response {
+	return v.value
+}
+
+func (v *NullableListEnvironments200Response) Set(val *ListEnvironments200Response) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableListEnvironments200Response) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableListEnvironments200Response) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableListEnvironments200Response(val *ListEnvironments200Response) *NullableListEnvironments200Response {
+	return &NullableListEnvironments200Response{value: val, isSet: true}
+}
+
+func (v NullableListEnvironments200Response) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableListEnvironments200Response) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
